--- a/templates/complete-report.html
+++ b/templates/complete-report.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enhanced Product Analysis Report - {{PRODUCT_TITLE}}</title>
-    <link rel="stylesheet" href="https://yourusername.github.io/product-analysis-assets/product-analysis-styles.css">
+    <link rel="stylesheet" href="https://XKennedy7.github.io/product-analysis-assets/product-analysis-styles.css">
 </head>
 <body>
     <div class="container">
